--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     container_name: laravel_app
     working_dir: /var/www/html
     volumes:
-      - ./src:/var/www/html
+      - ./src2:/var/www/html
       - ./my-custom-000-default.conf:/etc/apache2/sites-available/000-default.conf
     ports:
       - "80:80"
